[project]
name = "rvolution"
description = "A wrapper to control R_volution Media Player via API interface"
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"
keywords = ["R_Volution","remote control"]
authors = [
    { name = "skyrahfall" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
version = {attr = "rvolution.__version__"}
dependencies = {file = "requirements/requirements.txt"}

[project.urls]
GitHub = "https://github.com/skyrahfall/rvolution"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"